added a slide animation to contact overlay

--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/contactSection/contacts_style.css">
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
+    <link rel="stylesheet" href="./styles/contactSection/overlay_contacts.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +70,7 @@
                     <div class="contacts-content-left">
 
                         <div class="contacts-content-left-header">
-                            <div class="add-new-contact">
+                            <div class="add-new-contact" onclick="toggleOverlay()">
                                 <p>Add new contact</p><img src="./assets/svg/contacts_svg/person_add.svg" alt="">
                             </div>
                         </div>
@@ -263,13 +264,13 @@
             </div>
         </div>
 
-        <section class="add-contact-overlay"></section>
 
 
 
 
 
 
+        <div id="overlay-container"></div>
 </body>
 
 </html>
