--- a/overlay_contacts.html
+++ b/overlay_contacts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/contactSection/overlay_contacts.css">
+    <link rel="stylesheet" href="./styles/standard.css">
 </head>
 
 <body style="background-color: antiquewhite;">
