--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
             </div>
 
             <section class="navBar">
-                <a href="./summary.html"><button class="nav_btn nav_summary " disabled="true"><span><img
+                <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
                 <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
@@ -37,7 +37,7 @@
                 <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
                                 alt="">Board</span></button></a>
 
-                <a href="./contacts.html"><button class="nav_btn nav_contacts active"><span><img
+                <a href="./contacts.html"><button class="nav_btn nav_contacts active" disabled="true"><span><img
                                 src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
             </section>
