privacy policy box added, hovere effects, input icons added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="login-content-box" id="loginContentBox">
         <div class="nau-sign-up-box">
-            <div class="nau-sign-up">Not a Join user?<button class="login">Sign Up</button> </div>
+            <div class="nau-sign-up"><span class="text-nau" >Not a Join user?</span><button class="">Sign Up</button> </div>
         </div>
         <div class="login-content">
             <div class="login-h1">
@@ -21,20 +21,29 @@
             </div>
             <div class="login-form">
                 <form>
-                    <input type="email" placeholder="Email">
-                    <input type="password" placeholder="Password">
+                    <input type="email" placeholder="Email" id="email">
+                    <input type="password" placeholder="Password" id="password">
                     <div class="login-button-box">
                         <button class="login">Login</button> <button class="guest-login">Guest Login</button>
                     </div>
                 </form>
             </div>
+        </div>    
+
+        <div class="prvt-polce-legl-note-box">
+            <div class="prvt-polce-legl-note">
+                <button class="priv-legal"></span> Privacy Policy</button>
+                <button class="priv-legal"></span> Legal notice</button>
+            </div>
         </div>
+
     </div>
 
     <div class="p1-logo-box">
         <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
     </div>
-    <div class="backdrop" id="backdrop"></div>
+    <!-- 
+    <div class="backdrop" id="backdrop"></div>-->
 
 </body>
 
