--- a/hilfe.html
+++ b/hilfe.html
@@ -62,27 +62,68 @@
             <div class="content-right">
                 <div class="help-header">
                     <h1>Help</h1>
-                    <a class="back-arrow" href="javascript:history.back()">
+                </div>
+                <div class="back-arrow">
+                    <a href="javascript:history.back()">
                         <img src="./assets/img/back_arrow_blue.png" alt="">
                     </a>
                 </div>
 
                 <div class="help-content">
-                    <p>Welcome to the help page og Join, your guide to using our kanban project management tool.
-                        Here, we´ll provide an overview of what Join is, how it can benefit you, and how to use it.
+                    <p>Welcome to the help page og <span class="color-29ABE2">Join</span>, your guide to using our kanban project management tool.
+                        Here, we´ll provide an overview of what <span class="color-29ABE2">Join</span> is, how it can benefit you, and how to use it.
                     </p>
                     <br>
                     <h3>What is Join?</h3>
                     <br>
-                    <p>Join is a kanban-based project management tool designed and build by a group of dedicated students as part of their web 
+                    <p><span class="color-29ABE2">Join</span> is a kanban-based project management tool designed and build by a group of dedicated students as part of their web 
                         develpment bootcamp at the Developer Akademie.
                     </p>
                     <br>
                     <p>Kanban, a japanese term meaning "bilboard" is a higly effective method to visualize work, limit work in-progress, and maximize
-                        efficiency (or flow). Join leverages the pronciples of kanban to help users manage their tasks and projects in an intuitive, visual interface.
+                        efficiency (or flow). <span class="color-29ABE2">Join</span> leverages the pronciples of kanban to help users manage their tasks and projects in an intuitive, visual interface.
                     </p>
                     <br>
-                    <p>It is important to note that Join is designed as an educational exercise and is not intended for extensive</p>
+                    <p>It is important to note that <span class="color-29ABE2">Join</span> is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure
+                    the best possible user experience, we cannot guarantee coonsistent availability, reliability, accuracy, ro otther aspects of quality regarding <span class="color-29ABE2">Join</span>.</p>
+                    <br>
+                    <h3>How to use it</h3>
+                    <br>
+                    <p>Here is a step-by-step guide on how to use <span class="color-29ABE2">Join</span>:</p>
+                    <br>
+                    <ol class="help-list">
+                        <li>
+                            <span class="li-text"><h4>Exploring the Board</h4>
+                            When you log in to <span class="color-29ABE2">Join</span>, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", "Await feedback", and "Done".</span>
+                        </li>
+                        <li>
+                            <span class="li-text"><h4>Creating Contacts</h4>
+                            In <span class="color-29ABE2">Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</span>
+                        </li>
+                        <li>
+                            <span class="li-text"><h4>Adding Cards</h4>
+                            Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task details in the card, like task name, description, due date, assignees, etc.</span>
+                        </li>
+                        <li>
+                            <span class="li-text"><h4>Moving Cards</h4>
+                            As the task moves from one stage to another, you can reflect that on the board by dragging and dropping the card from one list to another.</span>
+                        </li>
+                        <li>
+                            <span class="li-text"><h4>Deleting Cards</h4>
+                            Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercide caution when deleting cards, as this action is irreversible.
+                            <br>
+                            <br>
+                            Remember that using <span class="color-29ABE2">Join</span> effectively requires consistent update from you and your team to ensure the board reflects the current state of your project.
+                            <br>
+                            <br>
+                            Have more questions about <span class="color-29ABE2">Join</span>? Feel free to contact us at [Your Contact Email]. We´re here to help you!</span>
+                        </li>
+                    </ol>
+
+                    <div class="help-footer">
+                        <h3>Enjoy using Join!</h3>
+                    </div>
+
                 </div>
                 <!-- Hier kommt der Code hin! -->
 
