added summary button links

--- a/summary.html
+++ b/summary.html
@@ -66,7 +66,7 @@
                     <div class="summary-overview">
 
                         <div class="to-do-done">
-                            <button class="to-do">
+                            <button onclick="location.href='./board.html'" class="to-do">
                                 <svg width="70" height="70" viewBox="0 0 70 70" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="35.3945" cy="34.8083" r="34.5" fill="#2A3647" />
@@ -85,7 +85,7 @@
                                 </span>
                             </button>
 
-                            <button class="checked">
+                            <button onclick="location.href='./board.html'" class="checked">
                                 <svg width="70" height="70" viewBox="0 0 70 70" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="34.8945" cy="34.8083" r="34.5" fill="#2A3647" />
@@ -98,7 +98,7 @@
                             </button>
                         </div>
 
-                        <div class="important-info">
+                        <div onclick="location.href='./board.html'" class="important-info">
                             <button>
                                 <div class="urgent-tasks">
                                     <img src="./assets/img/Urgent_Arrow.png" alt="">
@@ -115,15 +115,15 @@
                         </div>
 
                         <div class="board-overview">
-                            <button>
+                            <button onclick="location.href='./board.html'">
                                 <h2 id="tasksInBoard"></h2>
                                 <span class="font-size-20px">Tasks<br> in Board</span>
                             </button>
-                            <button>
+                            <button onclick="location.href='./board.html'">
                                 <h2 id="tasksInProgress"></h2>
                                 <span class="font-size-20px">Tasks<br> in Progress</span>
                             </button>
-                            <button>
+                            <button onclick="location.href='./board.html'">
                                 <h2 id="awaitingFeedback"></h2>
                                 <span class="font-size-20px">Awaiting<br> Feedback</span>
                             </button>
