--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
                 <button class="priv-legal"></span> Legal notice</button>
             </div>
         </div>
-
+        <div class="p1-logo-box">
+            <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
+        </div>
+        <div class="backdrop" id="backdrop"></div>
     </div>
 
-    <div class="p1-logo-box">
+    <!-- <div class="p1-logo-box">
         <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
     </div>
-    <!-- 
+    
     <div class="backdrop" id="backdrop"></div>-->
 
 </body>
