--- a/hilfe.html
+++ b/hilfe.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content-right">
+            <div class="content-right overflow-y-auto">
                 <div class="help-header">
                     <h1>Help</h1>
                 </div>
