html classes renamed specific to sign up, input 'name' added to form, priv-polcy check span added

--- a/sign_up.html
+++ b/sign_up.html
@@ -5,26 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./styles/login.css">
-    <title>sighn up sandbox</title>
+    <link rel="stylesheet" href="./styles/signup.css">
+    <title>sign up in progress</title>
 </head>
 
 <body>
 
-    <div class="login-content-box" id="loginContentBox">
-        <div class="nau-sign-up-box">
-            <div class="nau-sign-up"><span class="text-nau" >Not a Join user?</span><button class="">Sign Up</button> </div>
-        </div>
-        <div class="login-content">
-            <div class="login-h1">
-                <h1>Login</h1>
+    <div class="signup-content-box" id="signupContentBox">
+        <div class="sgnp-successful"><span class="text-sgnp" >You Signed Up successfully</span> </div>
+        
+        <div class="signup-content">
+            <div class="sgnp-h1">
+                <h1>Sign Up</h1>
             </div>
-            <div class="login-form">
+            <div class="sgnp-form">
                 <form>
+
+                    <input type="text" placeholder="Name" id="signupName">
                     <input type="email" placeholder="Email" id="email">
                     <input type="password" placeholder="Password" id="password">
-                    <div class="login-button-box">
-                        <button class="login">Login</button> <button class="guest-login">Guest Login</button>
+                    <input type="password" placeholder="Password" id="password">
+                    <div class="sgnp-button-box">
+                        <span>I accept the <link rel="stylesheet" href="#">Privacy policy</span>
+                        <button class="signup">Sign up</button>
                     </div>
                 </form>
             </div>
@@ -39,11 +42,7 @@
 
     </div>
 
-    <div class="p1-logo-box">
-        <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
-    </div>
-    <!-- -->
-    <div class="backdrop" id="backdrop"></div>
+   
 
 </body>
 
