--- a/sign_up.html
+++ b/sign_up.html
@@ -12,7 +12,11 @@
 <body>
 
     <div class="signup-content-box" id="signupContentBox">
-        <div class="sgnp-successful"><span class="text-sgnp" >You Signed Up successfully</span> </div>
+
+        <div class="signup-message-box">
+            <div class="sgnp-successful"><span class="text-sgnp" >You Signed Up successfully</span> </div>
+        </div>
+        
         
         <div class="signup-content">
             <div class="sgnp-h1">
