no significant changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- <div class="p1-logo-box">
-        <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
+        <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg"></div>
     </div>
     
     <div class="backdrop" id="backdrop"></div>-->
