classes renamed, checkbox 'confirme priv pol' added

--- a/sign_up.html
+++ b/sign_up.html
@@ -13,8 +13,8 @@
 
     <div class="signup-content-box" id="signupContentBox">
 
-        <div class="signup-message-box">
-            <div class="sgnp-successful"><span class="text-sgnp" >You Signed Up successfully</span> </div>
+        <div class="signup-logo-box">
+            <div class="logo"><img src="./assets/img/logo_join_pos.svg"></div>
         </div>
         
         
@@ -30,15 +30,15 @@
                     <input type="password" placeholder="Password" id="password">
                     <input type="password" placeholder="Password" id="password">
                     <div class="sgnp-button-box">
-                        <span>I accept the <link rel="stylesheet" href="#">Privacy policy</span>
+                        <span class="confirm-priv-polce"><input type="checkbox" class="check-priv-polce">I accept the <link rel="stylesheet" href="#">Privacy policy</span>
                         <button class="signup">Sign up</button>
                     </div>
                 </form>
             </div>
         </div>    
 
-        <div class="prvt-polce-legl-note-box">
-            <div class="prvt-polce-legl-note">
+        <div class="priv-polce-legl-note-box">
+            <div class="priv-polce-legl-note">
                 <button class="priv-legal"></span> Privacy Policy</button>
                 <button class="priv-legal"></span> Legal notice</button>
             </div>
