improved sidebar and header

--- a/board.html
+++ b/board.html
@@ -35,7 +35,7 @@
                 <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
                                 src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
-                <a href="./board.html"><button class="nav_btn nav_board active" disabled><span><img
+                <a class="active" href="./board.html"><button class="nav_btn nav_board active" disabled="true"><span><img
                                 src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
                 <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
@@ -43,10 +43,13 @@
 
             </section>
 
-            <div class="judicial-links gap-16">
-                <a class="nav-link flex-center" href="">Privacy Policy</a>
-                <a class="nav-link flex-center" href="">legal notice</a>
-
+            <div class="judicial-links ">
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                </div>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                </div>
             </div>
 
         </div>
@@ -59,8 +62,8 @@
             <div class="content-right">
                 <div class="header">
                     <p>Kanban Project Management Tool</p>
-                    <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                                src="./assets/img/navBar/help.svg" alt=""></button>
+                    <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
+                        src="./assets/img/navBar/help.png" alt=""></a>
                         <div><img class="profile_picture" src="" alt="">
                         </div>
                     </div>
