--- a/contacts.html
+++ b/contacts.html
@@ -37,14 +37,18 @@
                 <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
                                 alt="">Board</span></button></a>
 
-                <a href="./contacts.html"><button class="nav_btn nav_contacts active" disabled="true"><span><img
+                <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active" disabled="true"><span><img
                                 src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
             </section>
 
-            <div class="judicial-links gap-16">
-                <a class="nav-link flex-center" href="">Privacy Policy</a>
-                <a class="nav-link flex-center" href="">legal notice</a>
+            <div class="judicial-links">
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                </div>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                </div>
 
             </div>
 
@@ -56,8 +60,8 @@
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                            src="./assets/img/navBar/help.svg" alt=""></button>
+                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
+                    src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
                     </div>
                 </div>
