--- a/standardnavbar.html
+++ b/standardnavbar.html
@@ -39,8 +39,12 @@
             </section>
 
             <div class="judicial-links gap-16">
-                <a class="nav-link flex-center" href="">Privacy Policy</a>
-                <a class="nav-link flex-center" href="">legal notice</a>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                </div>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                </div>
 
             </div>
 
