--- a/summary.html
+++ b/summary.html
@@ -22,7 +22,7 @@
             </div>
 
             <section class="navBar">
-                <a href="./summary.html"><button class="nav_btn nav_summary active" disabled="true"><span><img
+                <a class="active" href="./summary.html"><button class="nav_btn nav_summary active" disabled="true"><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
                 <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
@@ -36,9 +36,13 @@
 
             </section>
 
-            <div class="judicial-links gap-16">
-                <a class="nav-link flex-center" href="">Privacy Policy</a>
-                <a class="nav-link flex-center" href="">legal notice</a>
+            <div class="judicial-links">
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                </div>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                </div>
 
             </div>
 
