--- a/add_task.html
+++ b/add_task.html
@@ -33,7 +33,7 @@
                 <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                <a href="./add_task.html"><button class="nav_btn nav_add_task active" disabled><span><img
+                <a class="active" href="./add_task.html"><button class="nav_btn nav_add_task active" disabled><span><img
                                 src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
                 <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
@@ -44,10 +44,13 @@
 
             </section>
 
-            <div class="judicial-links gap-16">
-                <a class="nav-link flex-center" href="">Privacy Policy</a>
-                <a class="nav-link flex-center" href="">legal notice</a>
-
+            <div class="judicial-links">
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                </div>
+                <div class="judicial-links-container">
+                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                </div>
             </div>
 
         </div>
@@ -58,8 +61,8 @@
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                            src="./assets/img/navBar/help.svg" alt=""></button>
+                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
+                    src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
                     </div>
                 </div>
